testsuite/tests/interpreter/sublist_builtin/test.out
2
3
[2, 3]
[1, 2, 3, 4, 5]
script.lkql:6:17: error: Invalid index: 0
6 | print(l.sublist(0, 5))
  |                 ^
 in sublist (called at script.lkql:6:7)
